--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #1a1aff; 
   font-family: Arial, sans-serif; 
-  color: #191970; 
+  color: #ccff99; 
 }
 
 .Kartu-profil{
