--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #006080; 
   font-family: Arial, sans-serif; 
-  color: #ffffff; 
+  color: #333333; 
 }
 
 .Kartu-profil{
